# bmstu-oop

./: README.md  app
lab01/: CMakeLists.txt  Canvas.cpp  MainWindow.cpp  MainWindow.hpp  execute.cpp  output.txt  screen.cpp  vector3d.hpp
lab01/include/: Canvas.hpp  MainWindow.hpp  command.hpp  edges.hpp  error.hpp  execute.hpp  global.hpp  model.hpp  read.hpp  vector3d.hpp
lab01/src/: Canvas.cpp  MainWindow.cpp  edges.cpp  error.cpp  execute.cpp  main.cpp  model.cpp  read.cpp  test  test.cpp  vector3d.cpp
lab01qtcreator/: Canvas.cpp  Canvas.hpp  MainWindow.cpp  MainWindow.hpp  command.hpp  edges.cpp  edges.hpp  error.cpp  error.hpp  execute.cpp  execute.hpp  global.hpp  lab01qtcreator.pro  main.cpp  model.cpp  model.hpp  read.cpp  read.hpp  screen.cpp  screen.hpp  transform.cpp  transform.hpp  transformMeta.hpp  vector2d.hpp  vector3d.cpp  vector3d.hpp
lab01qtcreator/data/platonic/: cube.txt
lab02/: CMakeLists.txt
lab02/include/: BaseCollection.h  ConstSetIterator.h  ConstSetIterator.hpp  Set.h  Set.hpp  SetNode.h  SetNode.hpp  errors.h
lab02/set/: CMakeLists.txt
lab02/set/include/: BaseCollection.h  ConstSetIterator.h  ConstSetIterator.hpp  Set.h  Set.hpp  SetNode.h  SetNode.hpp
lab02/set/src/: BaseCollection.cpp
lab02/set/unit_tests/: CMakeLists.txt
lab02/set/unit_tests/include/: clear_tests.hpp  combining_tests.hpp  constructor_tests.hpp  difference_tests.hpp  equality_tests.hpp  erase_tests.hpp  insertion_tests.hpp  intersection_tests.hpp  lookup_tests.hpp  operators_tests.hpp  symmetric_difference_tests.hpp  update_tests.hpp
lab02/set/unit_tests/src/: main_test.cpp
lab02/src/: BaseCollection.cpp  main.cpp
lab02/unit_tests/include/: constructor_tests.hpp  equality_tests.hpp  erase_tests.hpp  intersection_tests.hpp  lookup_tests.hpp  operators_tests.hpp  search_tests.hpp  set_tests.hpp
lab03/: CMakeLists.txt  README.md  anyExample.cpp  example  example.cpp  remarks.md  scheme.drawio
lab03/Facade/: Facade.cpp  Facade.hpp
lab03/ModelView/: ModelView.cpp  ModelView.hpp
lab03/Scene/: Scene.cpp  Scene.hpp
lab03/commands/: commands.cpp  commands.h  commands.hpp
lab03/containers/Matrix/: Matrix.h
lab03/containers/RectangularMatrix/: RectangularMatrix.h  RectangularMatrix.hpp
lab03/containers/Vector/: Vector.h  Vector.hpp
lab03/creators/: creators.cpp  creators.hpp
lab03/exceptions/: BaseException.cpp  BaseException.hpp  CreationException.cpp  CreationException.hpp  modelViewExceptions.cpp  modelViewExceptions.hpp  sceneExceptions.cpp  sceneExceptions.hpp  uploadExceptions.cpp  uploadExceptions.hpp
lab03/facade/: Facade.cpp  Facade.hpp
lab03/gui/: drawers.hpp  mainwindow.cpp  mainwindow.hpp
lab03/gui/drawers/: drawers.cpp  drawers.hpp
lab03/managers/: BaseManager.hpp  CameraManager.cpp  CameraManager.hpp  DrawManager.cpp  DrawManager.hpp  ModelManager.cpp  ModelManager.hpp  SceneManager.cpp  SceneManager.hpp  UploadManager.cpp  UploadManager.hpp
lab03/math3D/Edge/: Edge.h  Edge.hpp
lab03/math3D/Matrix4x4/: Matrix4x4.h  Matrix4x4.hpp
lab03/math3D/Point3D/: Point3D.h  Point3D.hpp
lab03/math3D/Vector4D/: Vector4D.h  Vector4D.hpp
lab03/objects/: BaseModel.hpp  BaseModelImplementator.hpp  Camera.cpp  Camera.hpp  CarcassModel.cpp  CarcassModel.hpp  CarcassModelImplementator.cpp  CarcassModelImplementator.hpp  CompositeObject.cpp  CompositeObject.hpp  InvisibleObject.cpp  InvisibleObject.hpp  Model.cpp  Model.hpp  Scene.hpp  SceneObject.hpp  VisibleObject.cpp  VisibleObject.hpp
lab03/transformations/: BaseTransformation.hpp  ITransformation.cpp  ITransformation.hpp  Transformation.cpp  Transformation.hpp  cameraCommands.cpp  cameraCommands.hpp  dimensionalTransformations.cpp  dimensionalTransformations.hpp
lab03/uploaders/: BaseUploader.hpp  CarcassUploader.cpp  CarcassUploader.hpp  Uploader.cpp  Uploader.hpp
lab03/visitors/: DrawVisitor.cpp  DrawVisitor.hpp  Visitor.cpp  Visitor.hpp
lab04/: CMakeLists.txt  STT.md  TODO  dps.drawio  main.cpp  uml.drawio
lab04/Cab/: Cab.cpp  Cab.hpp
lab04/CabDoors/: CabDoors.cpp  CabDoors.hpp
lab04/ControlPanel/: ControlPanel.cpp  ControlPanel.hpp
lab04/Direction/: Direction.cpp  Direction.hpp
lab04/Elevator/: Elevator.cpp  Elevator.hpp
lab04/Logger/: Logger.cpp  Logger.hpp
lab04/MainWindow/: mainwindow.cpp  mainwindow.hpp  mainwindow.ui
lab05/: conditioner.drawio
